Move CI checks to new job
This change moves CI checks to a separate job so that its more obvious
whether a CI failure is due to a build/test issue or a policy issue. It
also makes CI fail faster when there are policy issues.

Signed-off-by: Kern Walster <walster@amazon.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,14 +7,20 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
+  check:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 20
+      - run: make install-check-tools
+      - run: make check-ltag
+      - run: make check-dco
+      - run: make check-lint
+  test:
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v3
       - run: make
       - run: make test
-      - run: make install-check-tools
-      - run: make check
 
