Check last 20 commits in `make check-dco`
Rather than checking for the DCO sign of in every commit in the
repository, we only check a subset. Ideally, this would be only the new
commits in each PR, however that number is unknowable, so therefore we
just choose 20 somewhat arbitrarily.

Before this commit, we had a couple commits merged into main that were
either missing the DCO sign off or had an incorrect format, so we
hardcoded the start of the range. Now that we have more commits, we can
safely switch back to checking just the last 20.

Signed-off-by: Kern Walster <walster@amazon.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,11 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          fetch-depth: 20
+          # check-dco will check the last 20 commits, but commit ranges
+          # exclude the start commit in the result, but need that commit
+          # in order to calculate the range. i.e. HEAD~20..HEAD includes
+          # 20 commits, but including HEAD it needs 21 commits.
+          fetch-depth: 21
       - run: make install-check-tools
       - run: make check-ltag
       - run: make check-dco
