--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,4 +30,8 @@ jobs:
       - uses: actions/checkout@v3
       - run: make
       - run: make test
+  integration:
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v3
       - run: make integration
