--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,3 +44,11 @@ jobs:
         with:
           go-version: '>=1.18.0'
       - run: make integration
+  benchmarks:
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-go@v3
+        with:
+          go-version: '>=1.18.0'
+      - run: make benchmarks
