--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,11 +22,11 @@ jobs:
           go-version: '>=1.18.0'
       - run: wget https://github.com/google/flatbuffers/releases/download/v22.9.29/Linux.flatc.binary.g++-10.zip
       - run: unzip Linux.flatc.binary.g++-10.zip
-      - run: make install-check-tools
-      - run: make check-ltag
-      - run: make check-dco
-      - run: make check-lint
-      - run: PATH=$PATH:$(pwd) make check-flatc
+      - run: ./scripts/install-check-tools.sh
+      - run: ./scripts/check-ltag.sh
+      - run: ./scripts/check-dco.sh
+      - run: ./scripts/check-lint.sh
+      - run: PATH=$PATH:$(pwd) ./scripts/check-flatc.sh
   test:
     runs-on: ubuntu-20.04
     steps:
