Replace github workflow matrix include list
Signed-off-by: Clarence "Sparr" Risher <clrnc@amazon.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,9 +41,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        include:
-          - containerd: "1.6.19"
-          - containerd: "1.7.0"
+        containerd: ["1.6.19", "1.7.0"]
     env:
       DOCKER_BUILD_ARGS: "CONTAINERD_VERSION=${{ matrix.containerd }}"
     steps:
