Add close/open note to check-deps.sh PR for testing
Signed-off-by: Clarence "Sparr" Risher <clrnc@amazon.com>

--- a/.github/workflows/bump-deps.yml
+++ b/.github/workflows/bump-deps.yml
@@ -31,6 +31,7 @@ jobs:
       with:
         title: "Bump dependencies using scripts/bump-deps.sh"
         commit-message: "Bump dependencies using scripts/bump-deps.sh"
+        body: "This PR created by [create-pull-request](https://github.com/peter-evans/create-pull-request) must be closed and reopened manually to trigger automated checks."
         labels: dependencies
         delete-branch: true
         signoff: true
