Skip Github actions conditionally
This commit updates the github workflow to run when there are relevant
file changes based on the specfied paths. It includes all file changes
except for changes in the 'docs/' directory and Markdown files('*.md').
For pull requests, it includes Go source files, 'go.*'
files, files in 'cmd/' directory strating with 'go.' and the 'Makefile'

Signed-off-by: Arjun Raja Yogidas <arjunry@amazon.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,8 +3,20 @@ name: Build
 on:
   push:
     branches: [ main ]
+    paths:
+      - '**'
+      - '!docs/**' # ignore docs changes
+      - '!**.md' # ignore markdown changes
   pull_request:
     branches: [ main ]
+    paths:
+      - '**.go'
+      - 'go.*'
+      - 'cmd/go.*'
+      - 'Makefile'
+      - 'Dockerfile'
+      - 'integration/**'
+      - 'scripts/**'
 
 jobs:
   check:
