--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
         with:
           go-version: '1.18.10'
       - run: make
-      - run: make benchmark
+      - run: make benchmarks
   test:
     runs-on: ubuntu-20.04
     steps:
