--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,15 @@ on:
       - 'scripts/**'
 
 jobs:
+  benchmark:
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-go@v4
+        with:
+          go-version: '1.18.10'
+      - run: make
+      - run: make benchmarks-test
   test:
     runs-on: ubuntu-20.04
     steps:
