--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,8 +18,13 @@ on:
       - 'integration/**'
       - 'scripts/**'
 
+permissions:
+  contents: write
+  deployments: write
+      
 jobs:
   benchmark:
+    name: Performance regression check
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
@@ -27,7 +32,26 @@ jobs:
         with:
           go-version: '1.18.10'
       - run: make
-      - run: make benchmarks-test
+      - name: Run benchmark
+        run: make benchmarks-test
+      # Download previous benchmark result from cache (if exists)
+      - name: Download previous benchmark data
+        uses: actions/cache@v1
+        with:
+          path: ./cache
+          key: performance-benchmark
+      - name: Store benchmark result
+        uses: benchmark-action/github-action-benchmark@v1
+        with:
+          name: Go Benchmark
+          tool: 'go'
+          output-file-path: benchmark/performanceTest/results.json
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          auto-push: true
+          # Show alert with commit comment on detecting possible performance regression
+          alert-threshold: '200%'
+          comment-on-alert: true
+          fail-on-alert: true
   test:
     runs-on: ubuntu-20.04
     steps:
