Add basic workflow
*don't merge **

Signed-off-by: Arjun Raja Yogidas <arjunry@amazon.com>

--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -17,7 +17,11 @@ on:
       - 'Dockerfile'
       - 'integration/**'
       - 'scripts/**'
-            
+
+permissions:
+  contents: write
+  deployments: write
+      
 jobs:
   benchmark:
     name: Performance regression check
