--- a/.github/workflows/benchmark-visualisation.yml
+++ b/.github/workflows/benchmark-visualisation.yml
@@ -25,7 +25,14 @@ jobs:
         with:
           go-version: '1.18.10'
       - run: make
-      # - name: Run benchmark
+      - name: Run benchmark
+        run: echo "Benchmarking..."
+      - name: Update latest benchmark result
+        uses: actions/upload-artifact@v3
+        with:
+          name: benchmark-result
+          path: ${{github.workspace}}/results.json
+          # $ {{github.workspace}}/benchmark/performanceTest/output/results.json
       #   run: make benchmarks-perf-test
       # - run: cd benchmark/performanceTest && cat output/results.json
 
