Update check tools
Updates our check tools to the latest version. This is a prerequisite
for updating the go version

Signed-off-by: Kern Walster <walster@amazon.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -14,6 +14,14 @@ linters:
   disable:
     - errcheck
 
+issues:
+  exclude-rules:
+    - linters:
+        - revive
+      # Ignore unused parameter rule. It's not enforced by go and it can make it hard
+      # to understand what the unused parameter was supposed to be used for.
+      text: "unused-parameter:"
+
 run:
   deadline: 4m
   skip-dirs:
