Add workflows to run regression checks
This commit adds two workflows benchmark_visualization and
benchmark_regression_check
benchmark_visualization: Runs the benchmark targets on merge and uploads
the results as an artifact
benchmark_regression_check: Runs the benchmark targets and compares the
result with the previously uploaded artifact using the comparison script
and checks for regression.

Signed-off-by: Arjun Raja Yogidas <arjunry@amazon.com>

--- a/.github/workflows/benchmark_visualization.yml
+++ b/.github/workflows/benchmark_visualization.yml
@@ -14,7 +14,7 @@ permissions:
       
 jobs:
   benchmark:
-    name: Run Benchmarks on PR
+    name: Run Benchmarks on PR Merge
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
@@ -38,8 +38,8 @@ jobs:
         - uses: actions/checkout@v3
         - uses: actions/upload-artifact@v3
           with:
-            name: benchmark-result
-            path: ${{github.workspace}}/results.json
+            name: benchmark-result-artifact
+            path: ${{github.workspace}}/benchmark-result.json
 
   # push-benchmark-result-gh-pages:
   #     name: Push benchmark result to Github-pages
