--- a/.github/workflows/benchmark_visualization.yml
+++ b/.github/workflows/benchmark_visualization.yml
@@ -14,7 +14,7 @@ permissions:
       
 jobs:
   benchmark:
-    name: Run Benchmarks on PR
+    name: Run Benchmarks on PR Merge
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
@@ -39,7 +39,7 @@ jobs:
         - uses: actions/upload-artifact@v3
           with:
             name: benchmark-result
-            path: ${{github.workspace}}/results.json
+            path: ${{github.workspace}}/benchmark/performanceTest/output/results.json
 
   # push-benchmark-result-gh-pages:
   #     name: Push benchmark result to Github-pages
