--- a/.github/workflows/benchmark_visualization.yml
+++ b/.github/workflows/benchmark_visualization.yml
@@ -86,7 +86,11 @@ jobs:
           path: ${{github.workspace}}/current
 
       - name: Display structure of downloaded files
-        run: cd ${{github.workspace}}/current && ls -R
+        run: cd ${{github.workspace}}/current && ls -R -l
+
+      - name: Display file content
+        run: cat ${{github.workspace}}/current/${{ matrix.file }}
+          
       - name: Run benchmark action
         uses: benchmark-action/github-action-benchmark@v1
         with:
