--- a/.github/workflows/benchmark_visualization.yml
+++ b/.github/workflows/benchmark_visualization.yml
@@ -86,7 +86,7 @@ jobs:
           path: ${{github.workspace}}/current
 
       - name: Display structure of downloaded files
-        run: cd ${{github.workspace}}/current && ls -R
+        run: cd ${{github.workspace}}/current && ls -R -l
       - name: Run benchmark action
         uses: benchmark-action/github-action-benchmark@v1
         with:
