--- a/.github/workflows/benchmark_visualization.yml
+++ b/.github/workflows/benchmark_visualization.yml
@@ -11,6 +11,9 @@ on:
 permissions:
   contents: write
   deployments: write
+
+env:
+  GO_VERSION: '1.20.12'
       
 jobs:
   benchmark:
@@ -23,7 +26,7 @@ jobs:
           submodules: true
       - uses: actions/setup-go@v5
         with:
-          go-version: '1.20.6'
+          go-version: ${{ env.GO_VERSION }}
       - run: make
       - name: Run benchmark
         run: make benchmarks-perf-test 
