--- a/.github/workflows/prebuild.yml
+++ b/.github/workflows/prebuild.yml
@@ -6,6 +6,9 @@ on:
   pull_request:
     branches: [ main ]
 
+env:
+  GO_VERSION: '1.20.12'
+
 jobs:
   check:
     runs-on: ubuntu-20.04
@@ -19,7 +22,7 @@ jobs:
           fetch-depth: 21
       - uses: actions/setup-go@v5
         with:
-          go-version: '1.20.6'
+          go-version: ${{ env.GO_VERSION }}
       - run: wget https://github.com/google/flatbuffers/releases/download/v22.9.29/Linux.flatc.binary.g++-10.zip
       - run: unzip Linux.flatc.binary.g++-10.zip
       - run: ./scripts/install-check-tools.sh
