--- a/.github/workflows/comparision-test.yml
+++ b/.github/workflows/comparision-test.yml
@@ -4,6 +4,9 @@ on:
   schedule:
     - cron: "0 0 */2 * *" # every 2 days
 
+env:
+  GO_VERSION: '1.20.12'
+
 jobs:
   check:
     runs-on: ubuntu-20.04
@@ -11,7 +14,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v4
         with:
-          go-version: '1.20.6'
+          go-version: ${{ env.GO_VERSION }}
       - run: make
       - run: make benchmarks
       - run: cd benchmark/comparisonTest && cat output/results.json
