Run build workflow on change
Signed-off-by: Austin Vazquez <macedonv@amazon.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,6 +10,7 @@ on:
   pull_request:
     branches: ['main', 'release/**']
     paths:
+      - '.github/workflows/build.yml'
       - '**.go'
       - 'go.*'
       - 'cmd/go.*'
