Disable release note generation in release automation
As part of the v0.5.0 release, automation generated release notes which
included every commit in history. Instead the desired effect was to only
include the diff since the last release. Disabling for now until another
solution is found.

Signed-off-by: Austin Vazquez <macedonv@amazon.com>

--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -92,7 +92,7 @@ jobs:
         with:
           draft: true
           prerelease: false
-          generate_release_notes: true
+          generate_release_notes: false
           files: |
             ${{ needs.generate-artifacts.outputs.dynamic_binary_name }}
             ${{ needs.generate-artifacts.outputs.dynamic_binary_name }}.sha256sum
