--- a/.github/workflows/bump-deps.yml
+++ b/.github/workflows/bump-deps.yml
@@ -7,6 +7,9 @@ on:
   - cron: '0 10 * * 2' # weekly at 10AM Tuesday
   workflow_dispatch:
 
+env:
+  GO_VERSION: '1.21.8'
+
 permissions:
   contents: write
   pull-requests: write
@@ -23,7 +26,7 @@ jobs:
     - uses: actions/checkout@v4
     - uses: actions/setup-go@v5
       with:
-        go-version: '1.21.3'
+        go-version: ${{ env.GO_VERSION }}
 
     - run: ./scripts/bump-deps.sh
     - name: Create Pull Request
