Disable xattrs by default
Change --optimizations xattr to be default behavior, and add a new flag
to disable this annotation when creating a SOCI index.

This change also eliminated the need for the optimizations structure in
the CLI.

Signed-off-by: David Son <davbson@amazon.com>

--- a/config/config.toml
+++ b/config/config.toml
@@ -19,7 +19,7 @@ allow_no_verification=true
 # disable_verification=false
 # Causes TestRunWithDefaultConfig to break, but
 # fine to use in /etc/soci-snapshotter-grpc-config.toml
-max_concurrency=0  # Actually zero
+max_concurrency=0
 no_prometheus=false
 mount_timeout_sec=0
 fuse_metrics_emit_wait_duration_sec=0
