Run shellcheck from container in CI
This change runs shellcheck from container in CI instead of installing
the binary to the system and running from the lint bash script.

Signed-off-by: Austin Vazquez <macedonv@amazon.com>

--- a/.github/workflows/prebuild.yml
+++ b/.github/workflows/prebuild.yml
@@ -30,3 +30,10 @@ jobs:
       - run: ./scripts/check-dco.sh
       - run: ./scripts/check-lint.sh
       - run: PATH=$PATH:$(pwd) ./scripts/check-flatc.sh
+
+  shellcheck:
+    runs-on: ubuntu-20.04
+    container: koalaman/shellcheck-alpine:v0.10.0
+    steps:
+      - uses: actions/checkout@v4
+      - run: shellcheck ./**/*.sh
