--- a/.github/workflows/prebuild.yml
+++ b/.github/workflows/prebuild.yml
@@ -2,9 +2,9 @@ name: Pre-build
 
 on:
   push:
-    branches: [ main ]
+    branches: [ 'main', 'release/**']
   pull_request:
-    branches: [ main ]
+    branches: [ 'main', 'release/**']
 
 env:
   GO_VERSION: '1.21.8'
