--- a/.golangci.yml
+++ b/.golangci.yml
@@ -18,8 +18,9 @@ issues:
   exclude-rules:
     - linters:
         - revive
-      # Ignore unused parameter rule. It's not enforced by go and it can make it hard
-      # to understand what the unused parameter was supposed to be used for.
+      # Ignore unused parameter rule. It's not enforced by go and
+      # it can make it hard to understand what the unused parameter
+      # was supposed to be used for.
       text: "unused-parameter:"
 
 run:
