--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,7 @@ env:
 jobs:
   test:
     runs-on: ubuntu-20.04
+    timeout-minutes: 15
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
@@ -34,6 +35,7 @@ jobs:
       - run: make test
   integration:
     runs-on: ubuntu-20.04
+    timeout-minutes: 40
     strategy:
       fail-fast: false
       matrix:
