--- a/.github/workflows/bump-deps.yml
+++ b/.github/workflows/bump-deps.yml
@@ -20,7 +20,7 @@ jobs:
 
     # Don't bother bumping deps on forks.
     if: ${{ github.repository == 'awslabs/soci-snapshotter' || github.event_name == 'workflow_dispatch' }}
-    runs-on: ubuntu-20.04
+    runs-on: codebuild-soci-snapshotter-personal-pipeline-${{ github.run_id }}-${{ github.run_attempt }}-ubuntu-5.0-medium
 
     steps:
       - uses: actions/checkout@v4
