Add workflow for creating release branches
This change adds a GitHub Actions workflow for creating release branches
with jobs to 1) create the branch and 2) open a pull request with the
generated THIRD_PARTY_LICENSES file and updated getting started guide
version.

Signed-off-by: Austin Vazquez <macedonv@amazon.com>

--- a/.github/workflows/update-getting-started-guide.yml
+++ b/.github/workflows/update-getting-started-guide.yml
@@ -4,7 +4,7 @@ on:
   release:
     types: ['released']
   pull_request:
-    branches: ['main', 'release/**']
+    branches: ['main']
     paths:
       # Run workflow on changes to the workflow definition itself to spot check
       # the core version update functionality.
@@ -39,8 +39,8 @@ jobs:
 
     permissions:
       # Write permissions needed to create pull request.
-      # Risk is mitigated by seperating jobs such that workflows
-      # running with write permissions only use code from main.
+      # Risk for pwn requests is mitigated by seperating jobs such that
+      # workflows running with write permissions only use code from main.
       contents: write
       pull-requests: write
 
